created content of the card

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,24 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Checkout page</title>
   </head>
-  <body></body>
+  <body>
+    <form action="#" method="post">
+      <label for="name"></label>
+      <input type="text" name="name" id="name" placeholder="John Doe" />
+      <label for="number"></label>
+      <input
+        type="text"
+        name="number"
+        `
+        id="number"
+        placeholder="1111 1111 1111 1111"
+      />
+
+      <label for="date"></label>
+      <input type="date" name="date" id="date" placeholder="DD-MM-YYYY" />
+
+      <label for="name"></label>
+      <input type="text" name="name" id="name" placeholder="CVV" />
+    </form>
+  </body>
 </html>
