--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <title>Checkout page</title>
   </head>
   <body>
-    <form action="#" method="post">
-      <label for="name"></label>
-      <input type="text" name="name" id="name" placeholder="John Doe" />
-      <label for="number"></label>
-      <input
-        type="text"
-        name="number"
-        `
-        id="number"
-        placeholder="1111 1111 1111 1111"
-      />
+    <form action="#" method="post" class="form">
+      <div class="form__item">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          placeholder="John Doe"
+          class="form__item-input"
+        />
+      </div>
 
-      <label for="date"></label>
-      <input type="date" name="date" id="date" placeholder="DD-MM-YYYY" />
+      <div class="form__item">
+        <label for="number">Number</label>
+        <input
+          type="text"
+          name="number"
+          `
+          id="number"
+          placeholder="1111 1111 1111 1111"
+          class="form__item-input"
+        />
+      </div>
 
-      <label for="name"></label>
-      <input type="text" name="name" id="name" placeholder="CVV" />
+      <div class="form__bottom">
+        <div class="bottom__item">
+          <label for="date">Expiration date</label>
+          <input type="date" name="date" id="date" placeholder="DD-MM-YYYY" />
+        </div class="bottom__item">
+
+        <div class="bottom__item">
+          <label for="name">CVV</label>
+          <input type="text" name="name" id="name" placeholder="123" />
+        </div>
+      </div>
     </form>
   </body>
 </html>
